# src/pages/api/v1/posts.json.ts
@@ -1,0 +1,1 @@
+export { GET } from '../posts.json';
