# src/pages/api/v1/profile.json.ts
@@ -1,0 +1,1 @@
+export { GET } from '../profile.json';
