# src/pages/api/v1/projects.json.ts
@@ -1,0 +1,1 @@
+export { GET } from '../projects.json';
