# src/pages/api/v1/reads.json.ts
@@ -1,0 +1,1 @@
+export { GET } from '../reads.json';
