# src/pages/api/v1/tools.json.ts
@@ -1,0 +1,1 @@
+export { GET } from '../tools.json';
